# filter_lib

./: CMakeLists.txt  README.md  libfilter.rem
inc/: lib_filter_fir1.h  lib_filter_sos.h
octave/fir_filter_design/: convert_fir1_to_c_code.m  fir1_filter_design.txt
octave/iir_filter_design/: butterworth_filter_design.txt  convert_section_to_c_code.m
src/: example.c  example_fir1.c  example_sos.c  lib_filter_fir1.c  lib_filter_sos.c
